# FlatMessage

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benchmarks/: Cargo.toml
benchmarks/benches/: deserialization.rs  serialization.rs
benchmarks/src/: get_size_min.rs  main.rs  tests.rs
benchmarks/src/structures/: enum_fields.rs  enum_lists.rs  large_vectors.rs  long_strings.rs  multiple_bools.rs  multiple_fields.rs  multiple_integers.rs  one_bool.rs  point.rs  process_create.rs  small_enum_lists.rs  string_lists.rs  vectors.rs
book/: SUMMARY.md
book/chapter-1/: core_concepts.md  deriving_flatmessage.md  error_handling.md  getting_started.md  installation.md
book/chapter-2/: binary_format.md  serialization_model.md  supported_data_types.md
book/chapter-3/: changing_type.md  compatibility.md  field_value_validation.md  mandatory_fields.md  nested_structs.md  sealed_vs_non_sealed.md  versioning.md
book/chapter-4/: advanced_features.md  checksum_validation.md  default_values.md  ignoring_fields.md  message_name_validation.md  type_interchangeability.md
book/chapter-5/: performance_results.md
common/src/: constants.rs  data_format.rs
examples/serialize/: main.rs
flat_message/src/: builder.rs  config.rs  error.rs  flags_support.rs  flat_message.rs  flat_message_buffer.rs  lib.rs  metadata.rs  serde.rs  size.rs  storage.rs  structure_information.rs  timestamp.rs  unique_id.rs
flat_message_proc_macro/: Cargo.toml
flat_message_proc_macro/src/: attribute_parser.rs  attribute_value.rs  config.rs  const_assetions.rs  (+15 more)
tests/: Cargo.toml
(+38 files in other folders)
