[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
flat_message = { version = "1.0.0", path = "../flat_message", features = ["serde"] }
flexbuffers = "25"
serde = "1"
serde_derive = "1"
serde_json = "1"
bson = { version = "3", features = ["serde"] }
ciborium = "0.2.2"
rmp = "0.8.14"
rmp-serde = "1"
bincode = "2"
ascii_table = "4"
postcard = { version = "1", features = ["use-std"] }
clap = { version = "4", features = ["derive"] }
simd-json = "0.15.1"
get-size-derive = { version = "0.1.3" }

[dev-dependencies]
common = {path = "../common"}
criterion = "0.5.1"
crc = "3"
crc32fast = "1"
xxhash-rust = { version = "0.8.12", features = ["xxh32", "xxh3"] }

[[bench]]
name = "deserialization"
harness = false

[[bench]]
name = "serialization"
harness = false

[[bench]]
name = "hashes"
harness = false

[lints]
workspace = true
